# pdfscanner

./: .gitignore  pyproject.toml  readme.md
docs/superpowers/plans/: 2026-04-27-pdfscanner-implementation.md
docs/superpowers/specs/: 2026-04-27-pdfscanner-design.md
pdfscanner/: __main__.py  audio.py  cli.py  enrich.py  extractor.py  ocr.py  report.py
tests/: conftest.py  test_audio.py  test_cli.py  test_extractor.py  test_report.py
