[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfscanner"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "pymupdf>=1.24",
    "pillow>=10",
    "pyobjc-framework-Vision; sys_platform == 'darwin'",
]

[project.scripts]
pdfscanner = "pdfscanner.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
